--- a/ProjetoReact/src/views/Home.module.css
+++ b/ProjetoReact/src/views/Home.module.css
@@ -5,8 +5,54 @@
     justify-content: center;
     align-items: center;
     padding: 2em;
-    margin-bottom: -30%;
+ 
 }
 h1{
     padding: 1em;
 }
+.sobre_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.titulo{
+    font-size: 50px; 
+    font-weight: bold; 
+    color: #333; 
+    margin: 20px 0; 
+    text-align: center; 
+  }
+  
+
+.conteudo {
+    font-size: 24px; 
+    font-weight: normal; 
+    color: #666; 
+    margin: 10px 0; 
+    text-align: center;
+    width: 600px;
+    text-align: center;
+  }
+  
+
+.titulo a {
+    color: #0077cc;
+    text-decoration: none; 
+  }
+  
+.titulo a:hover {
+    text-decoration: underline; 
+  }
+.data{
+    padding-top: 10px;
+    left: 100%;
+  }
+.publi{
+    font-size: 40px; 
+    font-weight: bold; 
+    color: #333; 
+    margin: 20px 0; 
+    text-align: center; 
+  }
+   
