--- a/ProjetoReact/src/layout/Footer.module.css
+++ b/ProjetoReact/src/layout/Footer.module.css
@@ -7,7 +7,8 @@
     align-items: center;
     justify-content: center;    
     padding: 3em;
-    margin-top: 10%;
+    margin-top: 15%;
+    bottom: 0;
 }
 
 .footUl{
